styles/form.module.css
.container {
  align-items: center;
  text-align: center;
  display: flex;
  justify-content: center;
  background-color: rgba(70, 70, 70, 0.189);
  border-radius: 20px;
  height: 520px;
  width: 40%;
  padding: 60px;
  border: none;
  margin: auto;
  margin-left: 10%;
}

.label {
  color: white;
  justify-content: center;
  text-align: center;
  display: flex;
  margin-top: 20px;
}

.input {
  /* text-align: center; */
  border-radius: 3px;
  margin-top: 10px;
  margin-bottom: 10px;
  width: 300px;
  height: 40px;
  border: none;
}
.text {
  /* text-align: center; */
  border-radius: 3px;
  margin-top: 10px;
  width: 300px;
  height: 88px;
  border: none;
}
.button {
  justify-content: center;
  text-align: center;
  font-size: medium;
  border-radius: 12px;
  border: none;
  height: 38px;
  width: 68px;
  /* margin-left: 40%; */
  color: white;
  background-color: rgba(255, 27, 251, 0.575);
}
.ready {
  justify-content: center;
  text-align: center;
  font-size: medium;
  border-radius: 12px;
  border: none;
  height: 38px;
  width: 68px;
  margin-left: 40%;
  color: white;
  background-color: #aefb6f90;
}

.press {
  transition: transform 0.3s ease;
}

.press:hover {
  transform: translateY(-5px);
  background-color: rgba(255, 255, 255, 0.3);
}
.errorMessage {
  font-size: 10.5pt;
  font-weight: 600;
  color: rgba(255, 27, 251, 0.727);
  text-align: center;
  display: flex;
  justify-content: center;
  margin-bottom: 25px;
  margin-top: 12px;
}

